@@ -35,13 +35,19 @@ import javafx.scene.layout.StackPane;
 import javafx.scene.layout.VBox;
 import javafx.util.Duration;
 
+import java.net.URL;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
+import java.util.Objects;
+import java.util.Random;
 import java.io.IOException;
 
 public class SimulationView extends StackPane {
 
+    private static final Random RANDOM = new Random();
     private static final List<String> EVENT_TABS = List.of("all", "disaster", "conflict", "technology", "society");
     private static final Map<String, String> EVENT_TAB_LABELS = Map.of(
             "all", "All Events",
@@ -82,6 +88,11 @@ public class SimulationView extends StackPane {
             Map.entry("rebellion", "/images/commandsAndEvents/RebellionEvent.png"),
             Map.entry("economic_boom", "/images/commandsAndEvents/EcoBoomEvent.png")
     );
+    private static final int MAX_FEED_POSTS = 50;
+    private static final Duration EVENT_BUTTON_COOLDOWN = Duration.seconds(15);
+    private static final int MIN_RANDOM_BAD_EVENT_DELAY_SECONDS = 20;
+    private static final int MAX_RANDOM_BAD_EVENT_DELAY_SECONDS = 25;
+    private static final double EXTINCTION_POPULATION_THRESHOLD = 0.5;
 
 
     private GameState state;
@@ -97,33 +108,30 @@ public class SimulationView extends StackPane {
 
     private final FirebaseAuthService authService;
     private final DatabaseController databaseController;
+    private final Timeline liveFeedTimeline;
+    private final PauseTransition randomBadEventTimer = new PauseTransition();
+    private final Map<String, PauseTransition> eventCooldownTimers = new HashMap<>();
+    private boolean simulationEnded;
     private Runnable onSimulationEnd;
 
     public SimulationView(PlanetConfig config, FirebaseAuthService authService, DatabaseController databaseController) {
-        this.authService = authService;
-        this.databaseController = databaseController;
-        state = SimulationModel.buildInitialState(config);
-        yearTimeline = new Timeline(new KeyFrame(Duration.seconds(10), e -> advanceYear()));
-        yearTimeline.setCycleCount(Animation.INDEFINITE);
-        yearTimeline.play();
-        popupTimer = new PauseTransition(Duration.seconds(3));
-        popupTimer.setOnFinished(e -> clearPopup());
-        notificationLayer.setMouseTransparent(true);
-        notificationLayer.setPickOnBounds(false);
-        notificationLayer.setViewOrder(-1);
-        layoutRoot.setViewOrder(0);
-        buildUI();
+        this(SimulationModel.buildInitialState(config), authService, databaseController);
     }
 
-    public SimulationView(GameState loadedState, FirebaseAuthService authService, DatabaseController databaseController) {
+    public SimulationView(GameState initialState, FirebaseAuthService authService, DatabaseController databaseController) {
         this.authService = authService;
         this.databaseController = databaseController;
-        state = loadedState;
-        yearTimeline = new Timeline(new KeyFrame(Duration.seconds(10), e -> advanceYear()));
+        state = initialState;
+        yearTimeline = new Timeline(new KeyFrame(Duration.seconds(10), _ -> advanceYear()));
         yearTimeline.setCycleCount(Animation.INDEFINITE);
         yearTimeline.play();
+        liveFeedTimeline = new Timeline(new KeyFrame(Duration.seconds(5), _ -> addLiveFeedPost()));
+        liveFeedTimeline.setCycleCount(Animation.INDEFINITE);
+        liveFeedTimeline.play();
         popupTimer = new PauseTransition(Duration.seconds(3));
-        popupTimer.setOnFinished(e -> clearPopup());
+        popupTimer.setOnFinished(_ -> clearPopup());
+        randomBadEventTimer.setOnFinished(_ -> triggerRandomBadEvent());
+        scheduleRandomBadEvent();
         notificationLayer.setMouseTransparent(true);
         notificationLayer.setPickOnBounds(false);
         notificationLayer.setViewOrder(-1);
@@ -172,77 +180,13 @@ public class SimulationView extends StackPane {
     private HBox buildTopBar() {
         Button end = new Button("End Simulation");
         end.setStyle("""
-        -fx-background-color:#ef4444;
-        -fx-text-fill:white;
-        -fx-font-weight:bold;
-        -fx-background-radius:10;
-        -fx-padding:10 18 10 18;
-    """);
-        end.setOnAction(e -> {
-            yearTimeline.stop();
-            System.out.println("IDToken: " + authService.getSaveIdToken());
-            System.out.println("LocalId: " + authService.getSaveLocalIdToken());
-            databaseController.saveGameState(state, authService.getSaveIdToken(), authService.getSaveLocalIdToken(), 1);
-            if (onSimulationEnd != null) {
-                onSimulationEnd.run();
-            }
-        });
-
-        // Save button with slot popup
-        Button save = new Button("💾 Save Game");
-        save.setStyle("""
-        -fx-background-color:#38bdf8;
-        -fx-text-fill:#020617;
-        -fx-font-weight:bold;
-        -fx-background-radius:10;
-        -fx-padding:10 18 10 18;
-    """);
-
-        javafx.stage.Popup savePopup = new javafx.stage.Popup();
-        savePopup.setAutoHide(true);
-
-        VBox popupContent = new VBox(6);
-        popupContent.setPadding(new Insets(10));
-        popupContent.setStyle("""
-        -fx-background-color:#0f172a;
-        -fx-border-color:#38bdf8;
-        -fx-border-radius:10;
-        -fx-background-radius:10;
-    """);
-
-        Label popupTitle = new Label("Save to Slot");
-        popupTitle.setStyle("-fx-text-fill:white; -fx-font-weight:bold; -fx-font-size:13px;");
-        popupContent.getChildren().add(popupTitle);
-
-        for (int i = 1; i <= 3; i++) {
-            int slot = i;
-            Button slotBtn = new Button("Slot " + slot);
-            slotBtn.setMaxWidth(Double.MAX_VALUE);
-            slotBtn.setStyle("""
-            -fx-background-color:#1e293b;
-            -fx-text-fill:#e2e8f0;
-            -fx-background-radius:8;
-            -fx-padding:8 16 8 16;
-            -fx-cursor:hand;
+            -fx-background-color:#ef4444;
+            -fx-text-fill:white;
+            -fx-font-weight:bold;
+            -fx-background-radius:10;
+            -fx-padding:10 18 10 18;
         """);
-            slotBtn.setOnAction(ev -> {
-                databaseController.saveGameState(state, authService.getSaveIdToken(), authService.getSaveLocalIdToken(), slot);
-                System.out.println("Saved to slot " + slot);
-                savePopup.hide();
-            });
-            popupContent.getChildren().add(slotBtn);
-        }
-
-        savePopup.getContent().add(popupContent);
-
-        save.setOnAction(e -> {
-            if (savePopup.isShowing()) {
-                savePopup.hide();
-            } else {
-                javafx.geometry.Bounds bounds = save.localToScreen(save.getBoundsInLocal());
-                savePopup.show(save, bounds.getMinX(), bounds.getMaxY() + 4);
-            }
-        });
+        end.setOnAction(_ -> endSimulation());
 
         Label year = new Label("Year " + state.year);
         year.setStyle("-fx-text-fill:#e2e8f0; -fx-font-size:18px; -fx-font-weight:bold;");
@@ -251,15 +195,90 @@ public class SimulationView extends StackPane {
         world.setStyle("-fx-text-fill:#94a3b8; -fx-font-size:13px;");
 
         VBox titleBlock = new VBox(2, year, world);
+        HBox topStats = buildTopStatsSummary();
 
-        Region spacer = new Region();
-        HBox.setHgrow(spacer, Priority.ALWAYS);
+        Region leftSpacer = new Region();
+        Region rightSpacer = new Region();
+        HBox.setHgrow(leftSpacer, Priority.ALWAYS);
+        HBox.setHgrow(rightSpacer, Priority.ALWAYS);
 
-        HBox topBar = new HBox(12, titleBlock, spacer, save, end);
+        HBox topBar = new HBox(12, titleBlock, leftSpacer, topStats, rightSpacer, end);
         topBar.setPadding(new Insets(14, 18, 8, 18));
         topBar.setAlignment(Pos.CENTER_LEFT);
         topBar.setStyle("-fx-background-color:rgba(2,6,23,0.72);");
         return topBar;
+    }
+
+    private HBox buildTopStatsSummary() {
+        HBox stats = new HBox(18);
+        stats.setAlignment(Pos.CENTER);
+        stats.setMouseTransparent(true);
+        stats.getChildren().addAll(
+                createTopStat("Pop", String.format(Locale.US, "%.1fB", state.globalStats.population), "#ef4444"),
+                createTopStat("Stress", state.globalStats.stress + "%", statStatusColor("Stress", state.globalStats.stress)),
+                createTopStat("Economy", state.globalStats.economicHealth + "%", statStatusColor("Economic Health", state.globalStats.economicHealth)),
+                createTopStat("Exposure", state.globalStats.exposure + "%", statStatusColor("Exposure to Events", state.globalStats.exposure))
+        );
+        return stats;
+    }
+
+    private HBox createTopStat(String label, String value, String valueColor) {
+        Label title = new Label(label);
+        title.setStyle("-fx-text-fill:#94a3b8; -fx-font-size:12px;");
+
+        Label amount = new Label(value);
+        amount.setStyle("-fx-text-fill:" + valueColor + "; -fx-font-size:12px; -fx-font-weight:bold;");
+
+        HBox stat = new HBox(4, title, amount);
+        stat.setAlignment(Pos.CENTER);
+        return stat;
+    }
+
+    private String statStatusColor(String label, double value) {
+        if (label.equalsIgnoreCase("Stress") || label.equalsIgnoreCase("Exposure to Events")) {
+            if (value > 75) return "#ef4444";
+            if (value > 45) return "#f59e0b";
+            return "#22c55e";
+        }
+
+        if (label.equalsIgnoreCase("Economic Health")) {
+            if (value < 35) return "#ef4444";
+            if (value < 60) return "#f59e0b";
+            return "#22c55e";
+        }
+
+        return "#e2e8f0";
+    }
+
+    private void endSimulation() {
+        if (simulationEnded) {
+            return;
+        }
+
+        saveGameState();
+        finishSimulation();
+    }
+
+    private void finishSimulation() {
+        if (simulationEnded) {
+            return;
+        }
+
+        simulationEnded = true;
+        yearTimeline.stop();
+        liveFeedTimeline.stop();
+        popupTimer.stop();
+        randomBadEventTimer.stop();
+        stopEventCooldownTimers();
+        if (onSimulationEnd != null) {
+            onSimulationEnd.run();
+        }
+    }
+
+    private void saveGameState() {
+        System.out.println("IDToken: " + authService.getSaveIdToken());
+        System.out.println("LocalId: " + authService.getSaveLocalIdToken());
+        databaseController.saveGameState(state, authService.getSaveIdToken(), authService.getSaveLocalIdToken(), 1);
     }
 
     private VBox buildSidebar() {
@@ -302,7 +321,7 @@ public class SimulationView extends StackPane {
     private Button createSidebarTab(String tabId, String label) {
         Button tab = new Button(label);
         tab.setStyle(sidebarTabStyle(tabId.equals(activeSidebarTab)));
-        tab.setOnAction(e -> {
+        tab.setOnAction(_ -> {
             activeSidebarTab = tabId;
             buildUI();
         });
@@ -419,7 +438,7 @@ public class SimulationView extends StackPane {
             item.setMaxWidth(Double.MAX_VALUE);
             item.setAlignment(Pos.CENTER_LEFT);
             item.setStyle(eventLogItemStyle(entry.id.equals(selectedEventId)));
-            item.setOnAction(e -> {
+            item.setOnAction(_ -> {
                 selectedEventId = entry.id;
                 buildUI();
             });
@@ -435,13 +454,30 @@ public class SimulationView extends StackPane {
         VBox content = new VBox(12);
         content.setMaxWidth(Double.MAX_VALUE);
         content.setPadding(new Insets(0, 10, 0, 0));
+        HBox titleRow = new HBox(8);
+        titleRow.setAlignment(Pos.CENTER_LEFT);
+
         Label title = sectionLabel("World Feed");
-        Label subtitle = new Label("Live reactions from citizens, analysts, and reporters across the planet.");
+        Label liveBadge = new Label("LIVE");
+        liveBadge.setStyle("""
+            -fx-text-fill:#020617;
+            -fx-font-size:10px;
+            -fx-font-weight:bold;
+            -fx-padding:3 7 3 7;
+            -fx-background-radius:999;
+            -fx-background-color:#22c55e;
+        """);
+        titleRow.getChildren().addAll(title, liveBadge);
+
+        Label subtitle = new Label("Citizens, analysts, reporters, and local leaders are posting as the world changes.");
         subtitle.setWrapText(true);
         subtitle.setStyle("-fx-text-fill:#94a3b8; -fx-font-size:12px;");
 
+        Label count = new Label(state.feedPosts.size() + " recent posts");
+        count.setStyle("-fx-text-fill:#64748b; -fx-font-size:11px;");
+
         SocialFeedView feedView = new SocialFeedView(state.feedPosts);
-        content.getChildren().addAll(title, subtitle, feedView);
+        content.getChildren().addAll(titleRow, subtitle, count, feedView);
         return content;
     }
 
@@ -455,7 +491,7 @@ public class SimulationView extends StackPane {
         for (String tab : EVENT_TABS) {
             Button tabButton = new Button(EVENT_TAB_LABELS.get(tab));
             tabButton.setStyle(tabButtonStyle(tab.equals(activeEventTab)));
-            tabButton.setOnAction(e -> {
+            tabButton.setOnAction(_ -> {
                 activeEventTab = tab;
                 buildUI();
             });
@@ -499,11 +535,20 @@ public class SimulationView extends StackPane {
     }
 
     private void triggerEvent(GameEventDef event) {
+        if (isEventCoolingDown(event.id)) {
+            return;
+        }
+
         state = SimulationModel.applyPlayerCommand(state, event);
+        startEventCooldown(event.id);
         showPopup(event.id, state.pendingTriggeredEventId);
         activeSidebarTab = "events";
         if (!state.eventLog.isEmpty()) {
-            selectedEventId = state.eventLog.get(0).id;
+            selectedEventId = state.eventLog.getFirst().id;
+        }
+        if (shouldEndForExtinction()) {
+            finishSimulation();
+            return;
         }
         buildUI();
     }
@@ -512,18 +557,28 @@ public class SimulationView extends StackPane {
         String imagePath = EVENT_BUTTON_IMAGES.get(event.id);
         if (imagePath != null) {
             try {
-                String imageUrl = getClass().getResource(imagePath).toExternalForm();
+                URL imageResource = getClass().getResource(imagePath);
+                if (imageResource == null) {
+                    return createFallbackEventCard(event);
+                }
+
+                String imageUrl = imageResource.toExternalForm();
                 Image image = new Image(imageUrl);
                 if (image.isError() || image.getWidth() <= 0 || image.getHeight() <= 0) {
                     return createFallbackEventCard(event);
                 }
 
-                FXMLLoader loader = new FXMLLoader(getClass().getResource("/event-image-button.fxml"));
+                URL fxmlResource = Objects.requireNonNull(
+                        getClass().getResource("/event-image-button.fxml"),
+                        "Missing event-image-button.fxml"
+                );
+                FXMLLoader loader = new FXMLLoader(fxmlResource);
                 Node imageButton = loader.load();
                 EventImageButtonController controller = loader.getController();
                 controller.setImage(imageUrl);
                 // controller.setFitHeight(EVENT_BUTTON_HEIGHTS.getOrDefault(event.id, 84.0));
-                controller.setOnAction(e -> triggerEvent(event));
+                controller.setCoolingDown(isEventCoolingDown(event.id));
+                controller.setOnAction(_ -> triggerEvent(event));
                 return imageButton;
             } catch (IOException e) {
                 throw new IllegalStateException("Failed to load event image button for " + event.id + ".", e);
@@ -535,8 +590,97 @@ public class SimulationView extends StackPane {
 
     private EventCard createFallbackEventCard(GameEventDef event) {
         EventCard card = new EventCard(event);
-        card.setOnAction(e -> triggerEvent(event));
+        if (isEventCoolingDown(event.id)) {
+            card.setDisable(true);
+            card.setStyle("""
+                -fx-background-color:#991b1b;
+                -fx-text-fill:white;
+                -fx-border-color:#fecaca;
+                -fx-border-radius:8;
+                -fx-background-radius:8;
+                -fx-padding:12;
+                -fx-font-size:12px;
+                -fx-alignment:top-left;
+                -fx-opacity:1;
+            """);
+        }
+        card.setOnAction(_ -> triggerEvent(event));
         return card;
+    }
+
+    private boolean isEventCoolingDown(String eventId) {
+        PauseTransition timer = eventCooldownTimers.get(eventId);
+        return timer != null && timer.getStatus() == Animation.Status.RUNNING;
+    }
+
+    private void startEventCooldown(String eventId) {
+        PauseTransition oldTimer = eventCooldownTimers.remove(eventId);
+        if (oldTimer != null) {
+            oldTimer.stop();
+        }
+
+        PauseTransition timer = new PauseTransition(EVENT_BUTTON_COOLDOWN);
+        eventCooldownTimers.put(eventId, timer);
+        timer.setOnFinished(_ -> {
+            eventCooldownTimers.remove(eventId);
+            if (!simulationEnded) {
+                buildUI();
+            }
+        });
+        timer.playFromStart();
+    }
+
+    private void stopEventCooldownTimers() {
+        for (PauseTransition timer : eventCooldownTimers.values()) {
+            timer.stop();
+        }
+        eventCooldownTimers.clear();
+    }
+
+    private void scheduleRandomBadEvent() {
+        if (simulationEnded) {
+            return;
+        }
+
+        int delayRange = MAX_RANDOM_BAD_EVENT_DELAY_SECONDS - MIN_RANDOM_BAD_EVENT_DELAY_SECONDS + 1;
+        int delaySeconds = MIN_RANDOM_BAD_EVENT_DELAY_SECONDS + RANDOM.nextInt(delayRange);
+        randomBadEventTimer.setDuration(Duration.seconds(delaySeconds));
+        randomBadEventTimer.playFromStart();
+    }
+
+    private void triggerRandomBadEvent() {
+        List<GameEventDef> candidates = new ArrayList<>();
+        for (GameEventDef event : GameTypes.allEvents()) {
+            if (isBadRandomEvent(event) && SimulationModel.isEventAvailableForPlayer(state, event.id)) {
+                candidates.add(event);
+            }
+        }
+
+        if (!candidates.isEmpty()) {
+            GameEventDef event = candidates.get(RANDOM.nextInt(candidates.size()));
+            state = SimulationModel.applyEvent(state, event);
+            startEventCooldown(event.id);
+            showPopup(event.id, null);
+            activeSidebarTab = "events";
+            selectedEventId = state.eventLog.isEmpty() ? null : state.eventLog.getFirst().id;
+            if (shouldEndForExtinction()) {
+                finishSimulation();
+                return;
+            }
+            buildUI();
+        }
+
+        scheduleRandomBadEvent();
+    }
+
+    private boolean isBadRandomEvent(GameEventDef event) {
+        return "disaster".equals(event.category)
+                || "conflict".equals(event.category)
+                || "depression".equals(event.id);
+    }
+
+    private boolean shouldEndForExtinction() {
+        return state.globalStats.population < EXTINCTION_POPULATION_THRESHOLD;
     }
 
     private void ensureSelectedEvent() {
@@ -546,7 +690,7 @@ public class SimulationView extends StackPane {
         }
 
         if (selectedEventId == null || findSelectedEventEntry() == null) {
-            selectedEventId = state.eventLog.get(0).id;
+            selectedEventId = state.eventLog.getFirst().id;
         }
     }
 
@@ -670,12 +814,23 @@ public class SimulationView extends StackPane {
     }
 
     private String formatPopulationDelta(double value) {
-        return String.format("%+.1fB", value);
+        return String.format(Locale.US, "%+.1fB", value);
     }
 
     private void advanceYear() {
         state.year += 1;
         buildUI();
+    }
+
+    private void addLiveFeedPost() {
+        state.feedPosts.addFirst(SimulationModel.generateLiveFeedPost(state));
+        while (state.feedPosts.size() > MAX_FEED_POSTS) {
+            state.feedPosts.removeLast();
+        }
+
+        if ("feed".equals(activeSidebarTab)) {
+            buildUI();
+        }
     }
 
     private void showPopup(String eventId, String nextEventId) {
@@ -709,8 +864,9 @@ public class SimulationView extends StackPane {
         popupBox.setPadding(new Insets(0));
 
         String imagePath = TRIGGERED_EVENT_IMAGES.get(eventId);
-        if (imagePath != null && getClass().getResource(imagePath) != null) {
-            ImageView imageView = new ImageView(new Image(getClass().getResource(imagePath).toExternalForm()));
+        URL imageResource = imagePath == null ? null : getClass().getResource(imagePath);
+        if (imageResource != null) {
+            ImageView imageView = new ImageView(new Image(imageResource.toExternalForm()));
             imageView.setPreserveRatio(true);
             imageView.setFitWidth(250);
             popupBox.getChildren().add(imageView);
